--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "meteor-node-stubs": "~0.2.0",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
+    "react-highcharts": "^8.3.3",
     "react-mounter": "^1.2.0",
     "react-tap-event-plugin": "^1.0.0"
   }
