--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "start": "meteor run"
   },
   "dependencies": {
+    "highcharts": "^4.2.5",
     "material-ui": "^0.15.0",
     "meteor-node-stubs": "~0.2.0",
     "react": "^15.1.0",
